[gd_scene load_steps=2 format=2]

[ext_resource path="res://Info.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="username" type="TextEdit" parent="Control"]
margin_left = 410.0
margin_top = 248.0
margin_right = 710.0
margin_bottom = 288.0
text = "username"

[node name="password" type="TextEdit" parent="Control"]
margin_left = 407.0
margin_top = 305.0
margin_right = 707.0
margin_bottom = 345.0
text = "password"

[node name="NewAccount" type="CheckButton" parent="Control"]
margin_left = 461.0
margin_top = 171.0
margin_right = 621.0
margin_bottom = 211.0
hint_tooltip = "turn on to create a new account"
text = "new account"

[node name="Button" type="Button" parent="Control"]
margin_left = 508.0
margin_top = 375.0
margin_right = 608.0
margin_bottom = 415.0
text = "Login"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="toggled" from="Control/Button" to="." method="_on_Button_toggled"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
